[build-system]
requires = [
  "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yasin_utils"]

[project]
name = "yasin_utils"
version = "0.0.1"
authors = [
  { name="Mehmet Yasin Cifci", email="myasincifci@gmail.com" },
]
description = "A collection of utils I commonly use for my deep learning projects"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/myasincifci/yasin-utils"
Issues = "https://github.com/myasincifci/yasin-utils/issues"

